# div-growth-bot

./: .conf  .env.example  DISCLAIMER.txt  DOCKERFILE  LICENSE  README.md  pipe_notes.md  pyproject.toml  security.txt
div_growth_bot/: main.py
div_growth_bot/data/: PLACEHOLDER.py  active_stocks_filtered_by_age.parquet
div_growth_bot/logic/: budgeting.py  chat.py  conf.py  eda.ipynb  logic.py  model.py  pipe.py  prompts.py
div_growth_bot/web/: web.py
